# blueprint-rs

./: Cargo.toml
examples/: simple.rs
examples/zombie/: main.rs  spritesheet.xcf
examples/zombie/concept/: concept.xcf  goal.md
src/: art.rs  camera.rs  collection.rs  config.rs  context.rs  engine.rs  event.rs  input.rs  lib.rs  math.rs  sprite.rs  spritetype.rs  system.rs  world.rs
src/engine/: draw.rs  mod.rs  update.rs
src/systems/: locomotion.rs  mod.rs  movement.rs
