[package]
name = "blueprint"
version = "0.1.0"
authors = ["horup <sah@sah.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5.1"
image = "0.23.10"

[dependencies.glam]
version = "0.10.1"
features = ["mint"]

[dev-dependencies]
rand = "*"